--- a/styles.css
+++ b/styles.css
@@ -76,6 +76,7 @@ section {
     display: block;
     margin: 36px 0 10px 0;
     width: 100%;
+    max-width: 100%;
     border-radius: 20px;
     border: 1px solid #772FD3;
     padding: 12px;
@@ -92,6 +93,7 @@ section {
     flex-direction: column;
     align-items: center;
     width: 100%;
+    max-width: 100%;
     gap: 4px;
 }
 
@@ -105,4 +107,31 @@ section {
     color: #555;
     font-size: 20px;
     font-weight: 700;
+}
+
+@media screen and (max-width: 375px) {
+    main {
+        width: 100%;
+        padding: 20px;
+    }
+    
+    .img {
+        width: 310px;
+        width: 100%;
+        max-width: 300px;
+    }
+    
+    select, input-currency, input {
+        width: calc(100% - 36px);
+        margin: 0 auto 24px auto;
+    }
+    
+    button {
+        width: calc(100% - 36px);
+    }
+    
+    section {
+        width: calc(100% - 36px);
+    }
+    
 }
